# DayTrack

./: .gitignore  README.md
backend/: README.md  main.py  pyproject.toml  schema.md
backend/app/core/: config.py  exceptions.py  scheduler.py  websocket_manager.py
backend/app/database/: mongodb.py
backend/app/routes/: eod_routes.py  health_routes.py  task_routes.py  websocket_routes.py
backend/app/schemas/: summary_schema.py  task_schema.py  user_schema.py
backend/app/services/: eod_service.py  task_service.py
backend/app/utils/: mongo_utils.py
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/history/: page.tsx
frontend/app/summary/: page.tsx
frontend/components/layout/: Sidebar.tsx
frontend/components/notifications/: NotificationCenter.tsx
frontend/components/tasks/: TaskCard.tsx  TaskInput.tsx  TaskModal.tsx
frontend/components/ui/: ConfirmModal.tsx  DeleteModal.tsx
frontend/hooks/: useArchivedTasks.ts  useSummaries.ts  useTodayTasks.ts  useWebSocket.ts
frontend/types/: index.ts
